# ghc-plugin-non-empty

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ghc-plugin-non-empty.cabal
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: GhcPluginNonEmpty.hs
test/: Spec.hs
test/Test/Data/: Fail.hs  Overloaded.hs  Plain.hs
